Removed correction and added class homepage to correct

--- a/dev/index.html
+++ b/dev/index.html
@@ -60,7 +60,7 @@
     </script>
 
 </head>
-<body onload="pageLoadedHandler();">
+<body onload="pageLoadedHandler();" class="homepage">
     <div class="buttons">
         <a href="/create-your-own-jewellery/engagement-ring/"><button class="btn black">MAKE YOUR OWN</button></a>
         <a href="/engagement-rings/"><button class="btn white">VIEW COLLECTION</button></a>
