--- a/dev/index.html
+++ b/dev/index.html
@@ -64,7 +64,7 @@
     <div class='video-container'>
         <div class='mute-container fade-in'>
             
-            <a href='#' id="mute-button" class='video-button sound'>
+            <a href='#' class='video-button mute-button sound'>
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 213.7 213.7">
                   <g>
                     <rect x="40.686" y="79.814" width="55" height="55" transform="translate(136.372 214.628) rotate(180)" fill="#fff"/>
@@ -80,20 +80,20 @@
         </div>
         <div class='play-container fade-in'>
             
-            <a href='#' id="play-button" class='video-button'>
+            <a href='#' class='video-button play-button'>
                 <svg id="play-button-img" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                 width="50" height="50" viewBox="0 0 214 214"
                 xml:space="preserveAspectRatio">
                 <!-- <polygon class='triangle' id="XMLID_18_" fill="rgba(255, 255, 255, 1)" points="73.5,62.5 148.5,105.8 73.5,149.1 "/> -->
 
                 <polygon points="142 108 67 151 67 64 142 108 142 108" fill="#fff">
-                <animate id="play-to-pause-one" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="92 151 67 151 67 64 92 64 92 108" />
-                <animate id="pause-to-play-one" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 108 67 151 67 64 142 108 142 108" />
+                <animate class="play-to-pause-one" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="92 151 67 151 67 64 92 64 92 108" />
+                <animate class="pause-to-play-one" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 108 67 151 67 64 142 108 142 108" />
                 </polygon>
 
                 <polygon points="142 108 67 151 67 64 142 108 142 108" fill="#fff">
-                <animate id="play-to-pause-two" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 151 117 151 117 64 142 64 142 108" />
-                <animate id="pause-to-play-two" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 108 67 151 67 64 142 108 142 108" />
+                <animate class="play-to-pause-two" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 151 117 151 117 64 142 64 142 108" />
+                <animate class="pause-to-play-two" begin="indefinite" fill="freeze" attributeName="points" dur="200ms" to="142 108 67 151 67 64 142 108 142 108" />
                 </polygon>
 
                 <circle class='circle' id="XMLID_17_" fill="none"  stroke-width="7" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" cx="106.8" cy="106.8" r="103.3"/>
